# stable-segmentation-service

./: .env.example  .gitignore  README.md  pyproject.toml
benchmark/: direct_vs_served.py  latency.py  throughput.py
docs/: adapter-integration-notes.md  client-stability-notes.md  compatibility-matrix.md  correctness-evaluation-plan.md  performance-evaluation-plan.md  versioning-compatibility-plan.md
eval_assets/: README.md
eval_assets/requests/: clipseg_text.json  sam2_box.json  sam2_point.json
results/clipseg/: compatibility.md  correctness.md  direct_vs_served.md  latency.md  throughput.md  versioning.md
results/final/: maintainability_table.md  summary_table.md
results/mock/: compatibility.md  correctness.md  direct_vs_served.md  latency.md  throughput.md  versioning.md
results/sam2/: compatibility.md  correctness.md  direct_vs_served.md  latency.md  throughput.md  versioning.md
scripts/: evaluate_compatibility.py  evaluate_correctness.py  evaluate_versioning.py
src/segmentation_service/: __init__.py  config.py  logging_config.py  main.py
src/segmentation_service/adapters/: __init__.py  base.py  clipseg_adapter.py  mock_adapter.py  registry.py  sam2_adapter.py
src/segmentation_service/api/: router.py
src/segmentation_service/api/v1/: capabilities.py  health.py  router.py  segment.py
src/segmentation_service/api/v2/: capabilities.py  health.py  router.py  segment.py
src/segmentation_service/client/: __init__.py  cli.py
src/segmentation_service/eval/: __init__.py  correctness.py  direct_runners.py  probe_payloads.py
src/segmentation_service/schemas/: capabilities.py  health.py  segment.py  v2segment.py
src/segmentation_service/web/: app.js  index.html  style.css
tests/: conftest.py  test_capabilities.py  test_client.py  test_clipseg_adapter.py  test_clipseg_endpoint.py  test_compatibility.py  test_direct_vs_served.py  test_eval_utils.py  test_health.py  test_probe_payloads.py  test_sam2_adapter.py  test_sam2_endpoint.py  test_segment.py  test_versioning.py
